--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>nexter &mdash; your home, your freedom</title>
   </head>
   <body class="container">
-    <div class="sidebar">Sidebar</div>
+    <div class="sidebar"><button class="nav-btn"></button></div>
     <div class="header">Header</div>
     <div class="realtors">Top 3 Realtors</div>
     <section class="features">
@@ -125,7 +125,7 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          p{$1,200,000}
+          <p>$ 1,200,000</p>
         </div>
         <button class="btn home__btn">Contact Realtor</button>
       </section>
@@ -157,7 +157,7 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          p{$1,200,000}
+          <p>$ 1,200,000</p>
         </div>
         <button class="btn home__btn">Contact Realtor</button>
       </section>
@@ -189,7 +189,7 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          p{$1,200,000}
+          <p>$ 1,200,000</p>
         </div>
         <button class="btn home__btn">Contact Realtor</button>
       </section>
@@ -221,7 +221,7 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          p{$1,200,000}
+          <p>$ 1,200,000</p>
         </div>
         <button class="btn home__btn">Contact Realtor</button>
       </section>
@@ -253,7 +253,7 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          p{$1,200,000}
+          <p>$ 1,200,000</p>
         </div>
         <button class="btn home__btn">Contact Realtor</button>
       </section>
@@ -285,12 +285,91 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          p{$1,200,000}
+          <p>$ 1,200,000</p>
         </div>
         <button class="btn home__btn">Contact Realtor</button>
       </section>
     </section>
-    <section class="gallery">Gallery</section>
-    <footer class="footer">Footer</footer>
+    <section class="gallery">
+      <figure class="gallery__item gallery__item--1">
+        <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--2">
+        <img src="img/gal-2.jpeg" alt="Gallery image 2" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--3">
+        <img src="img/gal-3.jpeg" alt="Gallery image 3" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--4">
+        <img src="img/gal-4.jpeg" alt="Gallery image 4" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--5">
+        <img src="img/gal-5.jpeg" alt="Gallery image 5" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--6">
+        <img src="img/gal-6.jpeg" alt="Gallery image 6" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--7">
+        <img src="img/gal-7.jpeg" alt="Gallery image 7" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--8">
+        <img src="img/gal-8.jpeg" alt="Gallery image 8" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--9">
+        <img src="img/gal-9.jpeg" alt="Gallery image 9" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--10">
+        <img
+          src="img/gal-10.jpeg"
+          alt="Gallery image 10"
+          class="gallery__img"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--11">
+        <img
+          src="img/gal-11.jpeg"
+          alt="Gallery image 11"
+          class="gallery__img"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--12">
+        <img
+          src="img/gal-12.jpeg"
+          alt="Gallery image 12"
+          class="gallery__img"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--13">
+        <img
+          src="img/gal-13.jpeg"
+          alt="Gallery image 13"
+          class="gallery__img"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--14">
+        <img
+          src="img/gal-14.jpeg"
+          alt="Gallery image 14"
+          class="gallery__img"
+        />
+      </figure>
+    </section>
+    <footer class="footer">
+      <ul class="nav">
+        <li class="nav__item">
+          <a href="#" class="nav__link">Find your dream Home</a>
+        </li>
+        <li class="nav__item"><a href="#" class="nav__link">Random Item</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Random Item</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Random Item</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Random Item</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Random Item</a></li>
+      </ul>
+      <p class="copyright">
+        &copy; Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+        tenetur doloremque fuga veritatis aperiam expedita quo, deserunt odio
+        omnis debitis!
+      </p>
+    </footer>
   </body>
 </html>
