--- a/index.html
+++ b/index.html
@@ -16,8 +16,39 @@
   </head>
   <body class="container">
     <div class="sidebar"><button class="nav-btn"></button></div>
-    <div class="header">Header</div>
-    <div class="realtors">Top 3 Realtors</div>
+    <div class="header">
+      <img src="img/logo.png" alt="Nexter Logo" class="header__logo" />
+      <h3 class="heading-3">Your own home;</h3>
+      <h1 class="heading-1">The ultimate personal freedom</h1>
+      <button class="btn header__btn">View our properties</button>
+      <div class="header__seenon-text">Seen on</div>
+      <div class="header__seenon-logos">
+        <img src="img/logo-bbc.png" alt="Seen on BBC" />
+        <img src="img/logo-bi.png" alt="Seen on BI" />
+        <img src="img/logo-forbes.png" alt="Seen on Forbes" />
+        <img src="img/logo-techcrunch.png" alt="Seen on TechCrunch" />
+      </div>
+    </div>
+    <div class="realtors">
+      <h3 class="heading-3">Top 3 Realtors</h3>
+      <div class="realtors__list">
+        <img src="img/realtor-1.jpeg" alt="" class="realtors__img" />
+        <div class="realtors__details">
+          <h4 class="heading-4 heading-4--light">Hemanth Sreenadhuni</h4>
+          <p class="realtors__sold">1234 homes</p>
+        </div>
+        <img src="img/realtor-1.jpeg" alt="" class="realtors__img" />
+        <div class="realtors__details">
+          <h4 class="heading-4 heading-4--light">Hemanth Sreenadhuni</h4>
+          <p class="realtors__sold">1234 homes</p>
+        </div>
+        <img src="img/realtor-1.jpeg" alt="" class="realtors__img" />
+        <div class="realtors__details">
+          <h4 class="heading-4 heading-4--light">Hemanth Sreenadhuni</h4>
+          <p class="realtors__sold">1234 homes</p>
+        </div>
+      </div>
+    </div>
     <section class="features">
       <div class="feature">
         <svg class="feature__icon">
