--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
       <div class="realtors__list">
         <img src="img/realtor-1.jpeg" alt="" class="realtors__img" />
         <div class="realtors__details">
-          <h4 class="heading-4 heading-4--light">Hemanth Sreenadhuni</h4>
-          <p class="realtors__sold">1234 homes</p>
+          <h4 class="heading-4 heading-4--light">Hemanth</h4>
+          <p class="realtors__sold">1234 homes sold</p>
         </div>
         <img src="img/realtor-1.jpeg" alt="" class="realtors__img" />
         <div class="realtors__details">
-          <h4 class="heading-4 heading-4--light">Hemanth Sreenadhuni</h4>
-          <p class="realtors__sold">1234 homes</p>
+          <h4 class="heading-4 heading-4--light">Hemanth</h4>
+          <p class="realtors__sold">1234 homes sold</p>
         </div>
         <img src="img/realtor-1.jpeg" alt="" class="realtors__img" />
         <div class="realtors__details">
-          <h4 class="heading-4 heading-4--light">Hemanth Sreenadhuni</h4>
-          <p class="realtors__sold">1234 homes</p>
+          <h4 class="heading-4 heading-4--light">Hemanth</h4>
+          <p class="realtors__sold">1234 homes sold</p>
         </div>
       </div>
     </div>
